security functionality added